2005-03-23  Sven Panne  <sven.panne@aedion.de>

	* linux/src/Makefile.in: Avoid useless relinking.

	* linux/audioconvert/Makefile.in: The test audioconvert test
	program is now called "test_ac". Using plain "test" could have
	been very surprising depending on your shell/PATH/..., because it
	is a very common shell builtin.

	* linux/audioconvert/test.c: Removed.

	* linux/audioconvert/test_ac.c: Added.

	* linux/Makefile.in, linux/audioconvert/Makefile.in,
	linux/doc/Makefile.in, linux/jlib/Makefile.in
	linux/src/Makefile.in, linux/test/Makefile.in: Unified *clean
	targets a bit and added a new target "repo-clean" which brings
	back everything to the "fresh from repository" state. Alas, there
	is no standard GNU target for this.

	Note that there is still a lot of cut-n-paste going on here, but
	this will improve when we switch to automake/libtool (which I
	intend to do).

2005-03-20  Sven Panne  <sven.panne@aedion.de>

	* linux/Makefile.in, linux/audioconvert/Makefile.in,
	linux/configure.ac, linux/jlib/Makefile.in, linux/src/Makefile.in,
	linux/test/Makefile.in: Explicitly handling MAKE is evil because
	it prevents the correct passing of commandline arguments to
	sub-makes. Small cleanup.

	* linux/configure.ac: Modernized a bit, requiring autoconf 2.58
	now. Fixed alsa-dlopen, arts-dlopen and esd-dlopen flags. Removed
	random "spell checking" of arguments. Removed --with-gcc flag,
	setting CC is the "autoconf way" of doing that.

	* linux/acconfig.h, linux/acinclude.m4, linux/aclocal.m4: Removed.

2005-03-18  Sven Panne  <sven.panne@aedion.de>

	* linux/audioconvert/ac_misc.c: Removed type punning, newer gcc
	don't like it. Made ReadChunk a bit nicer on the way.

	* linux/acinclude.m4, linux/aclocal.m4, linux/configure.ac,
	linux/src/Makefile.in: Removed MMX stuff, it is not working
	currently, the time of MMX detection is wrong, and even leads to
	compile-time errors.

	* linux/Makefile.in, linux/PLATFORM, linux/configure.ac,