@@ -36,7 +36,7 @@ while test $# -gt 0; do
       echo $exec_prefix
       ;;
     --version)
-      echo @VERSION@
+      echo @PACKAGE_VERSION@
       ;;
     --cflags)
       if test @includedir@ != /usr/include ; then
