@@ -6,7 +6,7 @@ includedir=@includedir@
 Name: OpenAL
 Description:  OpenAL is a cross-platform 3D audio API.
 Requires: @requirements@
-Version: @VERSION@
+Version: @PACKAGE_VERSION@
 Libs: -L${libdir} -lopenal
 Cflags: -I${includedir}
 
